<resources>
    <string name="app_name">Student Info System</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="fill_login">Please enter Username and Password</string>
    <string name="failed_login">Username or Password is incorrect</string>
    <string name="close">Close</string>
    <string name="course_registration">Course Registration</string>
    <string name="department_info">Department Info</string>
    <string name="account_settings">Account Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="account">Account</string>
    <string name="course_management">Course Management</string>
    <string name="department_management">Department Management</string>
    <string name="student_management">Student Management</string>
    <string name="course_id">Course ID</string>
    <string name="name">Name</string>
    <string name="price">Number of credits</string>
    <string name="status">Status</string>
    <string name="department">Department</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="save">Save</string>
    <string name="course_updated">Course successfully updated</string>
    <string name="course_fail_update">Unable to update course</string>
    <string name="deleted">Deleted</string>
    <string name="confirm_delete_session">Confirm Delete Session</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="add_course">Add Course</string>
    <string name="submit">Submit</string>
    <string name="course_added">Course successfully added</string>
    <string name="course_fail_add">Unable to add course</string>
    <string name="user_details">User Details</string>
    <string name="email">Email</string>
    <string name="security">Security</string>
    <string name="load_userinfo_fail">Unable to load account information</string>
    <string name="userinfo_updated">Information successfully updated</string>
    <string name="userinfo_update_fail">Unable to update information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="classes">Class</string>
    <string name="student_deleted">Student removed successfully</string>
    <string name="student_fail_update">Unable to update student information</string>
    <string name="confirm_delete_student">Confirm Delete Student</string>
    <string name="student_updated">Student information successfully updated</string>
    <string name="add_student">Add Student</string>
    <string name="student_added">Student added successfully</string>
    <string name="student_fail_add">Unable to add student</string>
    <string name="register">Register</string>
    <string name="register_success">Successfully registered</string>
    <string name="register_fail">Unable to register</string>
    <string name="no_session">No session available for this course</string>
    <string name="requirement">Requirement</string>
    <string name="course_close">Course is not open for register yet.</string>
    <string name="timetable">Timetable</string>
    <string name="score_list">Score List</string>
    <string name="course">Course</string>
    <string name="lecturer">Lecturer</string>
    <string name="room">Room</string>
    <string name="period">Period</string>
    <string name="week_day">Weekday</string>
    <string name="course_name">Course Name</string>
    <string name="score">Score</string>
    <string name="score_management">Score Management</string>
    <string name="choose_course">Choose Course</string>
    <string name="choose_session">Choose Session</string>
    <string name="choose_student">Choose Student</string>
    <string name="session_id">Session ID</string>
    <string name="student_id">Student ID</string>
    <string name="student_name">Student Name</string>
    <string name="score_updated">Score successfully updated</string>
    <string name="score_fail_update">Unable to update score</string>
    <string name="semester">Semester</string>
    <string name="year">Year</string>
    <string name="max_enroll">Class Size (Student)</string>
    <string name="start_period">Start Period</string>
    <string name="end_period">End Period</string>
    <string name="session_management">Session Manangement</string>
    <string name="session_updated">Session successfully updated</string>
    <string name="session_fail_update">Unable to update session</string>
    <string name="add_session">Add Session</string>
    <string name="session_added">Session successfully added</string>
    <string name="session_fail_add">Unable to add session</string>
    <string name="no_connection">No connection</string>
    <string name="building">Building</string>
    <string name="action_search">Search</string>
    <string name="title">Title</string>
    <string name="sent_by">Sent by</string>
    <string name="from">From</string>
    <string name="content">Content</string>
    <string name="send_time">Send time</string>
    <string name="notification">Notification</string>
    <string name="session">Session</string>
    <string name="noti_updated">Notification successfully updated</string>
    <string name="noti_fail_update">Unable to update notification</string>
    <string name="confirm_delete_noti">Confirm Delete Notification</string>
    <string name="add_noti">Add Notification</string>
    <string name="noti_added">Notification successfully added</string>
    <string name="noti_add_fail">Unable to add notification</string>
    <string name="confirm_delete_course">Confirm Delete Course</string>
    <string name="edit_score">Edit Score</string>
</resources>
