<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_id"
        android:textColor="#80000000"
        android:textSize="@dimen/_11sdp" />

    <EditText
        android:id="@+id/et_course_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="@dimen/_15sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="#80000000"
        android:textSize="@dimen/_11sdp" />

    <EditText
        android:id="@+id/et_course_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="@dimen/_15sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="#80000000"
        android:textSize="@dimen/_11sdp" />

    <EditText
        android:id="@+id/et_course_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="@dimen/_15sdp"
        android:inputType="number"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textColor="#80000000"
        android:textSize="@dimen/_11sdp" />

    <RadioGroup
        android:id="@+id/rg_course_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp">
        <RadioButton
            android:id="@+id/radio_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active"
            android:layout_marginRight="@dimen/_15sdp"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/radio_inactive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inactive"/>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/department"
        android:textColor="#80000000"
        android:textSize="@dimen/_11sdp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requirement"
        android:textColor="#80000000"
        android:textSize="@dimen/_11sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_requirement"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="@dimen/_15sdp"/>
        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14sdp"
            android:text="Add"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_requirement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/colorBlack"/>
</LinearLayout>