<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/session_id"
        android:textColor="#80000000"
        android:textSize="@dimen/_11sdp" />

    <TextView
        android:id="@+id/tv_session_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="@dimen/_15sdp" />

    <TextView
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_id"
        android:textColor="#80000000"
        android:textSize="@dimen/_11sdp" />

    <TextView
        android:id="@+id/tv_student_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="@dimen/_15sdp" />

    <TextView
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_name"
        android:textColor="#80000000"
        android:textSize="@dimen/_11sdp" />

    <TextView
        android:id="@+id/tv_student_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="@dimen/_15sdp" />

    <TextView
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="#80000000"
        android:textSize="@dimen/_11sdp" />

    <EditText
        android:id="@+id/et_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15sdp"
        android:inputType="numberDecimal"/>
</LinearLayout>